--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -36,14 +36,13 @@ tooltip {
 }
 
 #workspaces button {
-    padding: 5px;
     color: @surface0;
     margin-right: 5px;
 }
 
-/*#workspaces button.active {
+#workspaces button.active {
     color: @subtext0;
-} */
+} 
 
 #workspaces button.focused {
     color: @subtext0;
