--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -105,8 +105,7 @@ tooltip {
 
 #clock {
     color: @yellow;
-    border-radius: 10px;
-    margin-left: 10px;
+    border-left: 10px;
 }
 
 #date{
@@ -124,14 +123,12 @@ tooltip {
 
 #pulseaudio {
     color: @blue;
-    border-left: 0px;
-    border-right: 0px;
+    border-left: 10px;
 }
 
 #battery {
     color: @green;
-    border-radius: 0 10px 10px 0;
-    margin-right: 10px;
+    border-radius: 0;
     border-left: 0px;
 }
 
