--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -106,6 +106,7 @@ tooltip {
 #clock {
     color: @yellow;
     border-left: 10px;
+    border-radius: 0 10px 10px 0;
 }
 
 #date{
@@ -124,6 +125,7 @@ tooltip {
 #pulseaudio {
     color: @blue;
     border-left: 10px;
+    border-radius: 10px 0 0 10px;
 }
 
 #battery {
