--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -86,9 +86,9 @@ tooltip {
 #tray,
 #backlight {
     background: @base;
-    padding: 0px 10px;
+    /*padding: 0px 10px;
     margin: 3px 0px;
-    margin-top: 10px;
+    margin-top: 10px;*/
     border: 1px solid @mantle;
 }
 
