--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -30,7 +30,9 @@ tooltip {
 #workspaces {
     background: @base;
     border-radius: 10px;
-    margin-left: 10px;
+    /* margin-left: 10px; */
+    margin: 3px 0px;
+    margin-top: 10px;
     padding-right: 0px;
     padding-left: 5px;
 }
@@ -86,9 +88,9 @@ tooltip {
 #tray,
 #backlight {
     background: @base;
-    /*padding: 0px 10px;
+    padding: 0px 10px;
     margin: 3px 0px;
-    margin-top: 10px;*/
+    margin-top: 10px;
     border: 1px solid @mantle;
 }
 
