--- a/dot_config/wlogout/style.css
+++ b/dot_config/wlogout/style.css
@@ -2,11 +2,12 @@
     background-image: none;
     font-size: 20px;
     font-family: 'JetBrainsMono Nerd Font';
+    font-weight: bold;
+	  box-shadow: none;
 }
 
 window {
-    background-color: #11111b;
-    color: #cdd6f4;
+    background-color: rgba(30, 30, 46, 0.75);
 }
 
 button {
