--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -35,7 +35,7 @@ tooltip {
     border-radius: 10px;
     /* margin-left: 10px; */
     margin: 3px 0px;
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     padding-right: 0px;
     padding-left: 5px;
 }
@@ -93,7 +93,6 @@ tooltip {
     background: @base;
     padding: 0px 10px;
     margin: 3px 0px;
-    margin-top: 10px;
     border: 1px solid @mantle;
 }
 
