--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -14,6 +14,7 @@ window#waybar {
     border-right: 0px solid @sapphire;
     padding: 0;
     margin: 0;
+    border-radius: 10px;
     transition-property: background-color;
     transition-duration: .5s;
 }
