--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -92,7 +92,7 @@ tooltip {
 #tray,
 #backlight {
     background: @base;
-    /*padding: 0px 10px;*/
+    padding: 0px 10px;
     margin: 3px 0px;
     border: 1px solid @mantle;
 }
