--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -112,6 +112,7 @@ tooltip {
     color: @yellow;
     border-left: 10px;
     border-radius: 0 10px 10px 0;
+    padding-right: 5px;
 }
 
 #custom-date{
