--- a/dot_config/wlogout/style.css
+++ b/dot_config/wlogout/style.css
@@ -3,7 +3,7 @@
     font-size: 20px;
     font-family: 'JetBrainsMono Nerd Font';
     font-weight: bold;
-	  box-shadow: none;
+    box-shadow: none;
 }
 
 window {
@@ -11,14 +11,14 @@ window {
 }
 
 button {
-    border-radius: 32px;
+    border-radius: 0;  /* was 32px */
     color: #cdd6f4;
     background-color: #11111b;
-  	border-style: solid;
-  	border-width: 4px;
-  	background-repeat: no-repeat;
-  	background-position: center;
-  	background-size: 20%;
+    border-style: solid;
+    border-width: 4px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20%;
     margin: 0px;
     animation: gradient_f 20s ease-in infinite;
 }
@@ -32,7 +32,7 @@ button:focus {
 button:hover {
     background-color: #89b4fa;
     background-size: 25%;
-    border-radius: 8px; /* Adjust as needed for active_rad */
+    border-radius: 0;  /* was 8px */
     animation: gradient_f 20s ease-in infinite;
     transition: all 0.3s cubic-bezier(.55,0.0,.28,1.682);
 }
