disable rounded corners 4

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,6 +1,6 @@
 @import "mocha.css";
 
-/** NOTE: for rounded borders, adjust `border-radius` to `10px`
+/* NOTE: for rounded borders, adjust `border-radius` to `10px` */
 
 /** ********** Fonts ********** **/
 * {
