--- a/dot_config/waybar/pomodoro-bar.css
+++ b/dot_config/waybar/pomodoro-bar.css
@@ -31,8 +31,7 @@ window#waybar.pomodoro-bar > box {
     margin: 0;
     padding: 0;
     min-height: 5px;
-    font-size: 0;
-    line-height: 0;
+    font-size: 1px;
 }
 
 /* When timer is stopped - completely invisible */
