--- a/dot_config/waybar/pomodoro-bar.css
+++ b/dot_config/waybar/pomodoro-bar.css
@@ -29,7 +29,7 @@ window#waybar.pomodoro-bar > box {
     border: none;
     border-radius: 0;
     margin: 0;
-    padding: 0;
+    padding: 0 5px;
     min-height: 5px;
     font-size: 1px;
 }
