--- a/dot_config/waybar/pomodoro-bar.css
+++ b/dot_config/waybar/pomodoro-bar.css
@@ -29,9 +29,10 @@ window#waybar.pomodoro-bar > box {
     border: none;
     border-radius: 0;
     margin: 0;
-    padding: 0 5px;
-    min-height: 5px;
+    padding: 0;
+    min-height: 10px;
     font-size: 1px;
+    min-width: 100%;
 }
 
 /* Work phase - white progress bar */
