--- a/dot_config/waybar/pomodoro-bar.css
+++ b/dot_config/waybar/pomodoro-bar.css
@@ -16,7 +16,7 @@ window#waybar.pomodoro-bar {
 
 /* Hide all default styling */
 window#waybar.pomodoro-bar > box {
-    background-color: transparent;
+    background-color: #ff0000;
     border: none;
     margin: 0;
     padding: 0;
@@ -32,6 +32,7 @@ window#waybar.pomodoro-bar > box {
     padding: 0;
     min-height: 10px;
     font-size: 1px;
+    min-width: 1440px;
 }
 
 /* Work phase - white progress bar */
